--- a/main/components/A_fullscreen_hero_section/plant.html
+++ b/main/components/A_fullscreen_hero_section/plant.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plant</title>
-    <link rel="stylesheet" href="./plant.css">
+    <link rel="stylesheet" href="palnt.css">
 </head>
 
 <body>
     <main class="flex justify-between w-full  pl-8 ">
         <div>
             <header class=" demo2_header flex items-center">
-                <p class="text-4xl font-bold">plant.</p>
+                <p class="text-4xl font-bold">plant<span class="text-green-800">.</span></p>
 
             </header>
 
             <main class="demo2_plant_height flex flex-col justify-center w-[900px] gap-3 ">
-                <p class="text-5xl font-bold"> Find your <span class="text-green-600"> greeny</span> stuff for your
-                    room.</p>
-                <p class=""></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nesciunt quo, iure placeat
+                <p class="heading_1 relative text-5xl font-bold"> Find your <span class="text-green-600"> greeny</span> stuff for your
+                    room</p>
+    
+                <p class="text-xl mt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nesciunt quo, iure placeat
                     sapiente harum consequuntur minus.</p>
                 <a href="" class="bg-green-600 text-2xl text-white px-2 w-1/5 text-center py-1">Learn more</a>
             </main>
