--- a/main/input.css
+++ b/main/input.css
@@ -28,12 +28,36 @@
 
     }
 
-}
+    .demo2_header {
+        height: 100px;
+    }
 
-.demo2_header{
-    height: 100px;
-}
+    .demo2_plant_height {
+        height: calc(100vh - 100px);
+    }
 
-.demo2_plant_height {
-    height: calc(100vh - 100px);
+    .heading_1::before {
+        content: "";
+        @apply absolute w-16 top-16 ;
+        border-bottom: 6px solid green;
+  
+    }
+
+    .radius{
+        border-radius: 50%;
+      
+    }
+
+    .img_1{
+        height: 100px;
+        width: 100px;
+    }
+    .img_2{
+        height: 130px;
+        width: 130px;
+    }
+    .img_3{
+        height: 160px;
+        width: 160px;
+    }
 }
