--- a/main/components/card_grid_for_post/card_grid.html
+++ b/main/components/card_grid_for_post/card_grid.html
@@ -10,21 +10,21 @@
 </head>
 
 <body>
-    <main class="grid grid-cols-3 grid-rows-1 justify-center items-center h-screen ">
+    <main class="grid grid-cols-3 grid-rows-1 justify-center place-items-center m-auto  h-screen ">
         <!-- card 1 -->
-        <div class="shadow-lg h-[500px] w-[402px] flex flex-col">
+        <div class="shadow-lg h-[500px] w-[402px] flex flex-col rounded-lg ">
 
             <div class="h-[266px] w-[400px] relative">
-                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5">27
+                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5 font-bold  hover:text-blue-800 hover:bg-white">27
                     <br> march
                 </p>
-                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1">Photos</p>
-                <img src="../assets/card_image1.jpg" alt="" class="absolute h-[300px] w-[400px]">
+                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1 font-bold  hover:text-blue-800 hover:bg-white">Photos</p>
+                <img src="../assets/card_image1.jpg" alt="" class="absolute h-full opacity-70 hover:opacity-100 rounded-t-lg">
 
             </div>
             <div class="px-4 flex flex-col justify-between h-[150px] my-auto">
                 <div>
-                    <p class="text-2xl">Best View in Newyork city</p>
+                    <p class="text-2xl font-bold">Best View in Newyork city</p>
                     <p class="text-gray-600">The city that never sleeps</p>
 
                 </div>
@@ -35,19 +35,19 @@
             </div>
         </div>
         <!-- card 2 -->
-        <div class="shadow-lg h-[500px] w-[402px] flex flex-col">
+        <div class="shadow-lg h-[500px] w-[402px] flex flex-col rounded-lg  ">
 
             <div class="h-[266px] w-[400px] relative">
-                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5">20
+                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5 font-bold  hover:text-blue-800 hover:bg-white"  >20
                     <br> march
                 </p>
-                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1">Photos</p>
-                <img src="../assets/card_iamge2.jpg" alt="" class="absolute h-[300px]">
+                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1 font-bold  hover:text-blue-800 hover:bg-white">Photos</p>
+                <img src="../assets/card_iamge2.jpg" alt="" class="absolute w-full h-full opacity-70 hover:opacity-100  rounded-t-lg">
 
             </div>
             <div class="px-4 flex flex-col justify-between h-[150px] my-auto">
                 <div>
-                    <p class="text-2xl">Best pizza in town</p>
+                    <p class="text-2xl  font-bold">Best pizza in town</p>
                     <p class="text-gray-600">The city that never sleeps</p>
 
                 </div>
@@ -58,19 +58,19 @@
             </div>
         </div>
         <!-- card 3 -->
-        <div class="shadow-lg h-[500px] w-[402px] flex flex-col">
+        <div class="shadow-lg h-[500px] w-[402px] flex flex-col rounded-lg ">
 
             <div class="h-[266px] w-[400px] relative">
-                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5">15
+                <p class="absolute z-10  text-white text-center bg-blue-700 rounded-full h-16 w-16 right-5 top-5 font-bold  hover:text-blue-800 hover:bg-white">15
                     <br> april
                 </p>
-                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1">Photos</p>
-                <img src="../assets/card_image3.jpg" alt="" class="absolute h-[300px]">
+                <p class="absolute z-10 text-white bg-blue-700 bottom-0 text-xl px-1 font-bold  hover:text-blue-800 hover:bg-white">Photos</p>
+                <img src="../assets/card_image3.jpg" alt="" class="absolute h-full opacity-70 hover:opacity-100  rounded-t-lg">
 
             </div>
             <div class="px-4 flex flex-col justify-between h-[150px] my-auto">
                 <div>
-                    <p class="text-2xl">Best salad images ever</p>
+                    <p class="text-2xl font-bold">Best salad images ever</p>
                     <p class="text-gray-600">The city that never sleeps</p>
 
                 </div>
