--- a/main/input.css
+++ b/main/input.css
@@ -38,30 +38,37 @@
 
     .heading_1::before {
         content: "";
-        @apply absolute w-16 top-16 ;
+        @apply absolute w-16 top-16;
         border-bottom: 6px solid green;
-  
+
     }
 
-    .radius{
+    .radius {
         border-radius: 50%;
-      
+
     }
 
-    .img_1{
+    .img_1 {
         height: 100px;
         width: 100px;
     }
-    .img_2{
+
+    .img_2 {
         height: 130px;
         width: 130px;
     }
-    .img_3{
+
+    .img_3 {
         height: 160px;
         width: 160px;
     }
 
-    .gallery_image{
+    .gallery_image {
         height: calc(100vh - 90px);
+    }
+
+    .img {
+        height: 50px;
+        width: 50px;
     }
 }
