product page complete

--- a/main/components/product_page/product.html
+++ b/main/components/product_page/product.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="h-[100px] flex justify-between items-center w-[70%] m-auto">
-        <div class="font-mono text-3xl font-bold">
+        <div class="font-sans text-3xl font-bold text-slate-800">
             <a href="">WATCH.ME</a>
         </div>
         <div class="flex gap-4 uppercase">
@@ -23,11 +23,20 @@
     </header>
 
     <main class="flex justify-between items-center h-[100vh-100px] w-[70%] m-auto">
-        <div class="flex flex-col">
-            <p class="product relative">
+        <div class="flex flex-col justify-center items-start w-[60%] gap-4 h-[70vh]">
+            <p class="product relative  text-slate-800">
             </p>
-            <p class="">BE ON <br>
-            TIME</p>
+            <p class="text-7xl font-sans font-bold mt-10  text-slate-900">BE ON <br>
+               <span class="text-6xl">
+                TIME
+               </span> </p>
+
+            <p class=" text-slate-800">Dimension of reality that makes change possible and understandable. An indefinite and homogeneous
+                environment in which natural events and human existence take place.</p>
+            <div class="my-4 flex gap-4">
+                <a href="" class="bg-pink-500 text-white px-5 py-2 rounded-lg border-pink-500 border-2 hover:bg-pink-100 hover:text-pink-500">GET STARTED</a>
+                <a href="" class="bg-pink-500 text-white px-5 py-2 rounded-lg border-pink-500 border-2 hover:bg-pink-100 hover:text-pink-500">READ MORE</a>
+            </div>
         </div>
         <div>
             <img src="../assets/watch.png" alt="">
