--- a/main/components/FAQ_demo/FAQ.html
+++ b/main/components/FAQ_demo/FAQ.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>F.A.Q</title>
+    <link rel="stylesheet" href="Frequently.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+
 </head>
+
 <body>
-    
+    <header class="flex flex-col items-center justify-center p-4">
+        <p class="text-sm text-gray-400 font-mono">F.A.Q</p>
+        <p class="text-4xl font-bold">Frequently Asked <span class="text-blue-600">Questions</span></p>
+    </header>
+    <main class="flex flex-col justify-center gap-4 w-1/2 mx-auto mt-8">
+        <div class="flex w-[100%] justify-center gap-4">
+            <i class="ri-question-fill text-5xl text-blue-600"></i>
+            <p class=" bg-gray-100 w-2/3 p-3">What could be your first question? </p>
+        </div>
+        <div class="flex w-[100%] justify-center gap-4">
+            <p class="text-sm w-2/3 p-3 text-justify bg-blue-100">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Maiores consequuntur
+                nemo soluta
+                voluptates ab?
+                Fugit, asperiores aliquid? Dolorum mollitia explicabo voluptates, nisi.</p>
+            <i class="ri-lightbulb-flash-fill text-5xl text-blue-600"></i>
+        </div>
+
+        <div class="flex w-[100%] justify-center gap-4">
+            <i class="ri-question-fill text-5xl text-blue-600"></i>
+            <p class=" bg-gray-100 w-2/3 p-3">What could be your first question? </p>
+        </div>
+        <div class="flex w-[100%] justify-center gap-4">
+            <p class="text-sm w-2/3 p-3 text-justify bg-blue-100">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Maiores consequuntur
+                nemo soluta
+                voluptates ab?
+                Fugit, asperiores aliquid? Dolorum mollitia explicabo voluptates, nisi.</p>
+            <i class="ri-lightbulb-flash-fill text-5xl text-blue-600"></i>
+        </div>
+
+        <div class="flex w-[100%] justify-center gap-4">
+            <i class="ri-question-fill text-5xl text-blue-600"></i>
+            <p class=" bg-gray-100 w-2/3 p-3">What could be your first question? </p>
+        </div>
+        <div class="flex w-[100%] justify-center gap-4">
+            <p class="text-sm w-2/3 p-3 text-justify bg-blue-100">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Maiores consequuntur
+                nemo soluta
+                voluptates ab?
+                Fugit, asperiores aliquid? Dolorum mollitia explicabo voluptates, nisi.</p>
+            <i class="ri-lightbulb-flash-fill text-5xl text-blue-600"></i>
+        </div>
+
+    </main>
 </body>
+
 </html>
