--- a/main/components/responsive_registration_form/registration.html
+++ b/main/components/responsive_registration_form/registration.html
@@ -41,7 +41,7 @@
             </div>
 
 
-            <form action="" class="flex flex-col justify-center items-center gap-3 mt-8">
+            <form action="" class="flex flex-col justify-center items-center gap-3 mt-8 mb-5">
                 <input type="email" name="" id="" placeholder="email" class="w-1/3 bg-gray-100 px-9 py-2">
                 <input type="email" name="" id="" placeholder="password" class="w-1/3 bg-gray-100 px-9 py-2">
             </form>
