--- a/main/components/responsive_registration_form/registration.html
+++ b/main/components/responsive_registration_form/registration.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <main class="flex w-[90%] boeder border-2 mx-auto py-10 mt-5 ">
+    <main class="flex w-[90%] boeder border-2 mx-auto  mt-5 ">
         <!-- form -->
-        <div class="w-[50%] m-auto flex flex-col">
+        <div class="w-[50%] m-auto flex flex-col py-10">
 
             <div class="flex gap-3 justify-center">
                 <i class="ri-earth-fill text-blue-400"></i>
@@ -51,12 +51,15 @@
                 <a href="">Sign Up</a>
             </div>
 
-            <div class="w-1/2 text-center m-auto mt-4"><p>I agree t oabide tempalata's <a href="" class="underline underline-offset-1">Terms of service</a> and it's <a href="" class="underline underline-offset-1">privacy policy</a></p></div>
+            <div class="w-1/2 text-center m-auto mt-4">
+                <p>I agree t oabide tempalata's <a href="" class="underline underline-offset-1">Terms of service</a> and
+                    it's <a href="" class="underline underline-offset-1">privacy policy</a></p>
+            </div>
         </div>
 
         <!-- image -->
-        <div class="w-[50%] bg-blue-700">
-            <img src="../assets/sign.jpg" alt="" class="h-full w-screen ">
+        <div class="w-[50%] bg-blue-100">
+            <img src="../assets/file.png" alt="" class="h-full w-screen ">
         </div>
     </main>
 </body>
