--- a/main/components/Landing_page/landing.html
+++ b/main/components/Landing_page/landing.html
@@ -1,65 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Landing page</title>
-        <link rel="stylesheet" href="landing.css">
-    </head>
-    <body>
-        <main class="w-[80%] m-auto">
 
-            <!-- first div -->
-            <div
-                class="flex justify-center gap-4 bg-blue-600 text-white px-[10%] py-8">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing page</title>
+    <link rel="stylesheet" href="landing.css">
+</head>
 
-                <div
-                    class="flex flex-col justify-center items-start gap-4 w-[50%]">
-                    <p class="text-3xl font-bold">Discover the world's best
-                        coffee</p>
-                    <p class="text-[13px]">Form hand-picked farms to your cup,
-                        we
-                        source the finest
-                        beans and roast them to perfection.</p>
-                    <a href
-                        class="bg-white text-blue-600 rounded-full px-6 py-2 font-bold">Shop
-                        now</a>
-                </div>
-                <div>
-                    <img
-                        src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png"
-                        alt class="rounded-xl">
-                </div>
+<body>
+    <main class="w-[90%] m-auto">
+
+        <!-- first div -->
+        <div class="flex justify-center gap-4 bg-blue-600 text-white px-[10%] py-8">
+
+            <div class="flex flex-col justify-center items-start gap-4 w-[50%]">
+                <p class="text-3xl font-bold">Discover the world's best
+                    coffee</p>
+                <p class="text-[13px]">Form hand-picked farms to your cup,
+                    we
+                    source the finest
+                    beans and roast them to perfection.</p>
+                <a href class="bg-white text-blue-600 rounded-full px-6 py-2 font-bold  hover:bg-blue-100">Shop
+                    now</a>
             </div>
+            <div>
+                <img src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png" alt
+                    class="rounded-xl">
+            </div>
+        </div>
 
-            <!-- second div -->
-            <div class="flex flex-col gap-4 mt-10">
-                <p class="text-xl font-bold">Featured product </p>
-                <div class="grid md:grid-cols-3">
+        <!-- second div -->
+        <div class="flex flex-col gap-4 mt-10 mb-10">
+            <p class="text-xl font-bold">Featured product </p>
 
-                    <!-- first product -->
+            <div class="grid md:grid-cols-3 gap-10">
 
-                    <div
-                        class="flex flex-col gap-4 rounded-lg shadow-black shadow-xl">
-                        <img
-                            src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png"
-                            alt class="rounded-t-lg">
-                        <div class="flex flex-col gap-4 p-6">
-                            <p>Single origin blend</p>
-                            <p>Our most popular lend, Featuring beans form a
-                                single farm in Ethioia. Notes of chocolate,
-                                berries, and citrus.</p>
-                            <div class="flex justify-between">
-                                <p>$14.99</p>
-                                <a href
-                                    class="bg-blue-600 text-white md:font-bold md:px-4 md:py-2 md:rounded-full rounded-full">Add
-                                    to card</a>
-                            </div>
+                <!-- first product -->
+
+                <div class="flex flex-col gap-4 rounded-lg shadow-black shadow-xl">
+                    <img src="../assets/AdobeStock_558949687-ezgif.com-webp-to-png-converter.png" alt
+                        class="rounded-t-lg">
+                    <div class="flex flex-col gap-4 p-6">
+                        <p class="text-xl font-bold">Single origin blend</p>
+                        <p class="text-justify">Our most popular lend, Featuring beans form a
+                            single farm in Ethioia. Notes of chocolate,
+                            berries, and citrus.</p>
+                        <div class="flex justify-between">
+                            <p class="font-bold">$14.99</p>
+                            <a href
+                                class="bg-blue-600 text-white md:font-bold md:px-4 md:py-2 md:rounded-full rounded-full hover:text-blue-600 hover:bg-white hover:shadow-lg hover:shadow-black">Add
+                                to card</a>
                         </div>
                     </div>
-
                 </div>
+
+                <!-- second product -->
+
+                <div class="flex flex-col gap-4 rounded-lg shadow-black shadow-xl">
+                    <img src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png" alt
+                        class="rounded-t-lg">
+                    <div class="flex flex-col gap-4 p-6">
+                        <p class="text-xl font-bold">Dark Roast Blend</p>
+                        <p class="text-justify">A bold and flavorful blend of beans from Brazil, Colombia, and
+                            indonesia. Notes of caramel, nuts, and tobacco.</p>
+                        <div class="flex justify-between">
+                            <p class="font-bold">$12.99</p>
+                            <a href
+                                class="bg-blue-600 text-white md:font-bold md:px-4 md:py-2 md:rounded-full rounded-full hover:text-blue-600 hover:bg-white hover:shadow-lg hover:shadow-black">Add
+                                to card</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- third product -->
+
+                <div class="flex flex-col gap-4 rounded-lg shadow-black shadow-xl">
+                    <img src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png" alt
+                        class="rounded-t-lg">
+                    <div class="flex flex-col gap-4 p-6">
+                        <p class="text-xl font-bold">Dark Roast Blend</p>
+                        <p class="text-justify">A bold and flavorful blend of beans from Brazil, Colombia, and
+                            indonesia. Notes of caramel, nuts, and tobacco.</p>
+                        <div class="flex justify-between">
+                            <p class="font-bold">$12.99</p>
+                            <a href
+                                class="bg-blue-600 text-white md:font-bold md:px-4 md:py-2 md:rounded-full rounded-full hover:text-blue-600 hover:bg-white hover:shadow-lg hover:shadow-black">Add
+                                to card</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- fourth product -->
+
+                <div class="flex flex-col gap-4 rounded-lg shadow-black shadow-xl">
+                    <img src="../assets/fresh-coffee-steams-wooden-table-close-up-generative-ai_188544-8923.png" alt
+                        class="rounded-t-lg">
+                    <div class="flex flex-col gap-4 p-6">
+                        <p class="text-xl font-bold">Dark Roast Blend</p>
+                        <p class="text-justify">A bold and flavorful blend of beans from Brazil, Colombia, and
+                            indonesia. Notes of caramel, nuts, and tobacco.</p>
+                        <div class="flex justify-between">
+                            <p class="font-bold">$12.99</p>
+                            <a href
+                                class="bg-blue-600 text-white md:font-bold md:px-4 md:py-2 md:rounded-full rounded-full hover:text-blue-600 hover:bg-white hover:shadow-lg hover:shadow-black">Add
+                                to card</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </main>
-    </body>
+        </div>
+    </main>
+</body>
+
 </html>
